Optimized database queries

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@ Temporary commit content 221
 Temporary commit content 234
 Temporary commit content 271
 Temporary commit content 296
+Temporary commit content 297
